crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_parameter_honors_parameter_port_keyword_inheritance.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_parameter_honors_parameter_port_keyword_inheritance.sv
---
module child #(localparam int L = 1, int H = 2, parameter int A = 3, int B = 4) (); endmodule
module top; child #(.A(1), .B()) u(); endmodule
