crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_parameter_multiline_trailing_comma_style.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_parameter_multiline_trailing_comma_style.sv
---
module child #(parameter A = 1, parameter B, parameter C) (); endmodule
module top;
child #(
    .A(1),
    .B(),
    .C(),
) u();
endmodule
