crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_parameter_ordered_parameters.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_parameter_ordered_parameters.sv
---
module child #(parameter A, parameter B, parameter C) (); endmodule
module top; parameter B = 2; parameter C = 3; child #(1, B, C) u(); endmodule
