crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_parameter_ordered_placeholders.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_parameter_ordered_placeholders.sv
---
module child #(parameter A, parameter B, parameter C) (); endmodule
module top; child #(1, /* B */ 0, /* C */ 0) u(); endmodule
