crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@missing_parameter_skips_localparams.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/missing_parameter_skips_localparams.sv
---
module child #(parameter A = 1, parameter B = 2) (); localparam L = 3; endmodule
module top; localparam L = 4; child #(.A(1), .B()) u(); endmodule
