crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@named_port_shorthand_expand_all_named_connections.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/named_port_shorthand_expand_all_named_connections.sv
---
module child(input a, b); endmodule
module top; logic a, b; child u(.a(a), .b(b)); endmodule
