crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@named_port_shorthand_expands.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/named_port_shorthand_expands.sv
---
module child(input a); endmodule
module top; logic a; child u(.a(a)); endmodule
