crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@pull_assignment_down_nested_ternary_to_else_if_chain.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/pull_assignment_down_nested_ternary_to_else_if_chain.sv
---
module top; always_comb if (a) y = 1; else if (b) y = 2; else y = 3; endmodule
